--- a/src/Resume/package.json
+++ b/src/Resume/package.json
@@ -7,5 +7,23 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "angular2": "2.0.0-beta.12",
+    "systemjs": "0.19.24",
+    "es6-shim": "^0.35.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.2",
+    "zone.js": "0.6.6",
+    "jquery": "^2.2.2",
+    "bootstrap": "^3.3.6"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.0",
+    "gulp-typescript": "^2.8.0",
+    "gulp-sourcemaps": "^1.6.0",
+    "merge": "^1.2.0",
+    "typescript": "^1.8.9",
+    "typings": "^0.7.9"
+  }
 }
