--- a/src/Resume/package.json
+++ b/src/Resume/package.json
@@ -20,8 +20,9 @@
   },
   "devDependencies": {
     "gulp": "^3.9.0",
-    "gulp-typescript": "^2.8.0",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-typescript": "^2.8.0",
+    "jasmine-core": "2.4.1",
     "merge": "^1.2.0",
     "typescript": "^1.8.9",
     "typings": "^0.7.9"
