--- a/src/Resume/tsconfig.json
+++ b/src/Resume/tsconfig.json
@@ -8,12 +8,12 @@
     "noEmitOnError": false,
     "noImplicitAny": false,
     "noLib": false,
-    "outDir": "./wwwroot/js/app/",
+    "outDir": "./build",
     "removeComments": false,
     "rootDir": "./Scripts",
-    "inlineSourceMap": true,
-    "sourceMap": false,
+    "inlineSourceMap": false,
+    "sourceMap": true,
     "target": "es5"
   },
-  "exclude": ["node_modules", "wwwroot", "typings"]
+  "exclude": [ "node_modules", "wwwroot", "typings" ]
 }
