--- a/package.json
+++ b/package.json
@@ -71,7 +71,9 @@
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "rxjs": "5.0.0-beta.11",
-    "zone.js": "~0.6.17",
+    "zone.js": "~0.6.17"
+  },
+  "devDependencies": {
     "@angularclass/hmr": "^1.0.1",
     "@angularclass/hmr-loader": "^1.0.1",
     "@types/core-js": "^0.9.28",
