--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@angularclass/request-idle-callback": "^1.0.7",
     "@angularclass/webpack-toolkit": "^1.3.3",
     "core-js": "^2.4.1",
+    "express": "^4.14.0",
     "http-server": "^0.9.0",
     "ie-shim": "^0.1.0",
     "rxjs": "5.0.0-beta.11",
@@ -131,7 +132,7 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dfcook/Resume/"
-  },  
+  },
   "engines": {
     "node": ">= 4.2.1",
     "npm": ">= 3"
