--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-<<<<<<< HEAD
   "name": "resume",
   "version": "1.0.0",
   "description": "My CV",
@@ -17,40 +16,40 @@
     "axios": "^0.16.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuetify": "^0.10.4",
+    "vuetify": "^0.15.0-beta.2",
     "vuex": "^2.3.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.7.2",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.10",
-    "babel-plugin-istanbul": "^3.1.2",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-istanbul": "^4.1.4",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
-    "chai": "^3.5.0",
-    "chalk": "^1.1.3",
+    "chai": "^4.1.1",
+    "chalk": "^2.1.0",
     "connect-history-api-fallback": "^1.3.0",
     "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
-    "eslint": "^3.14.1",
-    "eslint-config-standard": "^6.2.1",
-    "eslint-friendly-formatter": "^2.0.7",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.5",
+    "eslint": "^4.5.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^2.0.0",
+    "eslint-plugin-html": "^3.2.0",
     "eslint-plugin-promise": "^3.4.0",
-    "eslint-plugin-standard": "^2.0.1",
+    "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "file-loader": "^0.10.0",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^0.11.2",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
-    "inject-loader": "^2.0.1",
+    "inject-loader": "^3.0.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -58,28 +57,28 @@
     "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.2.4",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
-    "lolex": "^1.5.2",
+    "lolex": "^2.1.2",
     "mocha": "^3.2.0",
-    "opn": "^4.0.2",
-    "optimize-css-assets-webpack-plugin": "^1.3.0",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.1.1",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^2.1.0",
+    "sinon": "^3.2.1",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.8",
-    "vue-loader": "^11.1.4",
-    "vue-style-loader": "^2.0.0",
+    "vue-loader": "^13.0.4",
+    "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.2.4",
-    "webpack": "^2.2.1",
+    "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
     "webpack-hot-middleware": "^2.16.1",
-    "webpack-merge": "^2.6.1"
+    "webpack-merge": "^4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
@@ -90,144 +89,4 @@
     "last 2 versions",
     "not ie <= 8"
   ]
-=======
-  "name": "Resume",
-  "version": "0.3.1",
-  "description": "My CV based on Angular Webpack Starter",
-  "keywords": [
-    "Daniel Cook CV"
-  ],
-  "author": "Daniel Cook",
-  "homepage": "http://http://dfcookcv.azurewebsites.net/",
-  "license": "MIT",
-  "scripts": {
-    "rimraf": "rimraf",
-    "tslint": "tslint",
-    "typedoc": "typedoc",
-    "webpack": "webpack",
-    "webpack-dev-server": "webpack-dev-server",
-    "webdriver-manager": "webdriver-manager",
-    "protractor": "protractor",
-    "clean": "npm cache clean && npm run rimraf -- node_modules doc coverage dist",
-    "clean:dist": "npm run rimraf -- dist",
-    "preclean:install": "npm run clean",
-    "clean:install": "npm set progress=false && npm install",
-    "preclean:start": "npm run clean",
-    "clean:start": "npm start",
-    "watch": "npm run watch:dev",
-    "watch:dev": "npm run build:dev -- --watch",
-    "watch:dev:hmr": "npm run watch:dev -- --hot",
-    "watch:test": "npm run test -- --auto-watch --no-single-run",
-    "watch:prod": "npm run build:prod -- --watch",
-    "build": "npm run build:dev",
-    "prebuild:dev": "npm run clean:dist",
-    "build:dev": "webpack --config config/webpack.dev.js --progress --profile",
-    "prebuild:prod": "npm run clean:dist",
-    "build:prod": "webpack --config config/webpack.prod.js  --progress --profile --bail",
-    "github-deploy": "npm run github-deploy:dev",
-    "github-deploy:dev": "webpack --config config/webpack.github-deploy.js --progress --profile --github-dev",
-    "github-deploy:prod": "webpack --config config/webpack.github-deploy.js --progress --profile --github-prod",
-    "server": "npm run server:dev",
-    "server:dev": "webpack-dev-server --config config/webpack.dev.js --progress --profile --watch --content-base src/",
-    "server:dev:hmr": "npm run server:dev -- --inline --hot",
-    "server:prod": "http-server dist --cors",
-    "webdriver:update": "npm run webdriver-manager update",
-    "webdriver:start": "npm run webdriver-manager start",
-    "lint": "npm run tslint \"src/**/*.ts\"",
-    "pree2e": "npm run webdriver:update -- --standalone",
-    "e2e": "npm run protractor",
-    "e2e:live": "npm run e2e -- --elementExplorer",
-    "test": "karma start",
-    "ci": "npm run lint && npm test && npm run e2e",
-    "docs": "npm run typedoc -- --options typedoc.json --exclude '**/*.spec.ts' ./src/",
-    "start": "npm run server:dev",
-    "start:hmr": "npm run server:dev:hmr",
-    "preversion": "npm test",
-    "version": "npm run build",
-    "postversion": "git push && git push --tags"
-  },
-  "dependencies": {
-    "@angular/common": "2.0.0-rc.6",
-    "@angular/compiler": "2.0.0-rc.6",
-    "@angular/core": "2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/http": "2.0.0-rc.6",
-    "@angular/platform-browser": "2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "2.0.0-rc.6",
-    "@angular/platform-server": "2.0.0-rc.6",
-    "@angular/router": "3.0.0-rc.2",
-    "@angularclass/conventions-loader": "^1.0.2",
-    "@angularclass/request-idle-callback": "^1.0.7",
-    "@angularclass/webpack-toolkit": "^1.3.3",
-    "core-js": "^2.4.1",
-    "express": "^4.14.0",
-    "http-server": "^0.9.0",
-    "ie-shim": "^0.1.0",
-    "rxjs": "5.0.0-beta.11",
-    "zone.js": "~0.6.17"
-  },
-  "devDependencies": {
-    "@angularclass/hmr": "^1.0.1",
-    "@angularclass/hmr-loader": "^1.0.1",
-    "@types/core-js": "^0.9.28",
-    "@types/hammerjs": "^2.0.28",
-    "@types/jasmine": "^2.2.29",
-    "@types/node": "^6.0.38",
-    "@types/protractor": "^1.5.16",
-    "@types/selenium-webdriver": "^2.44.26",
-    "@types/source-map": "^0.1.26",
-    "@types/uglify-js": "^2.0.27",
-    "@types/webpack": "^1.12.29",
-    "angular2-hmr": "~0.8.0",
-    "angular2-template-loader": "^0.5.0",
-    "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "~0.0.28",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.24.0",
-    "exports-loader": "^0.6.3",
-    "expose-loader": "^0.7.1",
-    "file-loader": "^0.9.0",
-    "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.21.0",
-    "imports-loader": "^0.6.5",
-    "istanbul-instrumenter-loader": "^0.2.0",
-    "json-loader": "^0.5.4",
-    "karma": "^1.2.0",
-    "karma-chrome-launcher": "^2.0.0 ",
-    "karma-coverage": "^1.1.1",
-    "karma-jasmine": "^1.0.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "1.8.0",
-    "parse5": "^2.2.1",
-    "protractor": "^4.0.4",
-    "raw-loader": "0.5.1",
-    "remap-istanbul": "^0.6.3",
-    "rimraf": "^2.5.2",
-    "source-map-loader": "^0.1.5",
-    "string-replace-loader": "^1.0.3",
-    "style-loader": "^0.13.1",
-    "to-string-loader": "^1.1.4",
-    "ts-helpers": "1.1.1",
-    "ts-node": "^1.3.0",
-    "tslint": "3.15.1",
-    "tslint-loader": "^2.1.3",
-    "typedoc": "^0.4.4",
-    "typescript": "2.0.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.21",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-dev-server": "^2.1.0-beta.2",
-    "webpack-md5-hash": "^0.0.5",
-    "webpack-merge": "^0.14.1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/dfcook/Resume/"
-  },
-  "engines": {
-    "node": ">= 4.2.1",
-    "npm": ">= 3"
-  }
->>>>>>> origin/master
 }
