--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "moment": "^2.18.1",
     "vue": "^2.2.2",
     "vue-router": "^2.3.0",
-    "vuetify": "^0.15.0-beta.2",
+    "vuetify": "^0.15.0-beta.4",
     "vuex": "^2.3.0"
   },
   "devDependencies": {
@@ -42,6 +42,7 @@
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
@@ -55,6 +56,8 @@
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-phantomjs-shim": "^1.4.0",
     "karma-sinon-chai": "^1.2.4",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
@@ -64,6 +67,7 @@
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.1.1",
     "ora": "^1.1.0",
+    "phantomjs-prebuilt": "^2.1.14",
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
