--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.1",    
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "vue": "^2.2.2",
@@ -43,6 +43,7 @@
     "eslint-loader": "^1.6.1",
     "eslint-plugin-html": "^3.2.0",
     "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
