--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "dependencies": {
     "axios": "^0.16.1",
+    "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
-    "vue": "^2.2.2",
-    "vue-router": "^2.3.0",
+    "vue": "^2.4.2",
     "vuetify": "^0.15.0-beta.4",
     "vuex": "^2.4.0"
   },
@@ -59,7 +59,7 @@
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "karma-phantomjs-shim": "^1.4.0",
-    "karma-sinon-chai": "^1.2.4",
+    "karma-sinon-chai": "^1.3.1",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
@@ -79,8 +79,9 @@
     "stylus-loader": "^3.0.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.0.4",
+    "vue-router": "^2.7.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.2.4",
+    "vue-template-compiler": "^2.3.3",
     "webpack": "^3.5.5",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
