--- a/package.json
+++ b/package.json
@@ -16,41 +16,43 @@
     "axios": "^0.16.1",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.4",
-    "moment": "^2.18.1",
-    "vue": "^2.4.2",
-    "vuetify": "^0.15.0-beta.5",
-    "vuex": "^2.4.0"
+    "moment": "^2.19.1",
+    "vue": "^2.5.2",
+    "vue-router": "^3.0.1",
+    "vuetify": "^0.16.7",
+    "vuex": "^3.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "avoriaz": "^4.0.0",
+    "@types/lodash": "^4.14.77",
+    "autoprefixer": "^7.1.5",
+    "avoriaz": "^6.0.0",
     "babel-core": "^6.22.1",
-    "babel-eslint": "^7.1.1",
+    "babel-eslint": "^8.0.1",
     "babel-loader": "^7.1.2",
-    "babel-plugin-istanbul": "^4.1.4",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-preset-env": "^1.2.1",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.22.0",
     "chai": "^4.1.1",
     "chalk": "^2.1.0",
-    "connect-history-api-fallback": "^1.3.0",
-    "copy-webpack-plugin": "^4.0.1",
+    "connect-history-api-fallback": "^1.4.0",
+    "copy-webpack-plugin": "^4.1.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
-    "eslint": "^4.5.0",
+    "eslint": "^4.9.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^3.2.0",
+    "eslint-plugin-html": "^3.2.2",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-node": "^5.1.1",
-    "eslint-plugin-promise": "^3.4.0",
+    "eslint-plugin-node": "^5.2.0",
+    "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "express": "^4.14.1",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^0.11.2",
+    "express": "^4.16.2",
+    "extract-text-webpack-plugin": "^3.0.1",
+    "file-loader": "^1.1.5",
     "friendly-errors-webpack-plugin": "^1.1.3",
     "html-webpack-plugin": "^2.28.0",
     "http-proxy-middleware": "^0.17.3",
@@ -59,34 +61,39 @@
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
-    "karma-phantomjs-shim": "^1.4.0",
+    "karma-phantomjs-shim": "^1.5.0",
     "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
-    "karma-webpack": "^2.0.2",
-    "lolex": "^2.1.2",
-    "mocha": "^3.2.0",
+    "karma-webpack": "^2.0.5",
+    "lolex": "^2.1.3",
+    "mocha": "^4.0.1",
     "opn": "^5.1.0",
-    "optimize-css-assets-webpack-plugin": "^3.1.1",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.1.0",
     "phantomjs-prebuilt": "^2.1.14",
-    "rimraf": "^2.6.0",
+    "rimraf": "^2.6.2",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
-    "sinon": "^3.2.1",
-    "sinon-chai": "^2.8.0",
-    "style-loader": "^0.18.2",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0",
+    "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "url-loader": "^0.5.8",
-    "vue-loader": "^13.0.4",
-    "vue-router": "^2.7.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.3.3",
-    "webpack": "^3.5.5",
+    "ts-loader": "^2.3.7",
+    "tslint": "^5.7.0",
+    "tslint-loader": "^3.5.3",
+    "typescript": "^2.5.3",
+    "url-loader": "^0.6.2",
+    "vue-class-component": "^6.0.0",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.3",
+    "vue-template-compiler": "^2.5.2",
+    "vuex-class": "^0.2.0",
+    "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
-    "webpack-hot-middleware": "^2.16.1",
+    "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
