--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "sourceMap": true,
       "experimentalDecorators": true,
       "allowSyntheticDefaultImports": true,
+      "noEmit": false,
       "noImplicitAny": true,
       "noImplicitReturns": true,
       "noImplicitThis": true,
