--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs"
   },
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.17.1",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.4",
     "moment": "^2.19.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^0.16.7",
+    "vuetify": "^0.17.5",
     "vuex": "^3.0.0"
   },
   "devDependencies": {
@@ -41,10 +41,10 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "eslint": "^4.9.0",
-    "eslint-config-standard": "^10.2.1",
+    "eslint-config-standard": "^11.0.0-beta.0",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.6.1",
-    "eslint-plugin-html": "^3.2.2",
+    "eslint-plugin-html": "^4.0.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.6.0",
@@ -64,7 +64,7 @@
     "karma-phantomjs-shim": "^1.5.0",
     "karma-sinon-chai": "^1.3.2",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.31",
+    "karma-spec-reporter": "0.0.32",
     "karma-webpack": "^2.0.5",
     "lolex": "^2.1.3",
     "mocha": "^4.0.1",
@@ -80,7 +80,7 @@
     "style-loader": "^0.19.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
-    "ts-loader": "^2.3.7",
+    "ts-loader": "^3.2.0",
     "tslint": "^5.7.0",
     "tslint-loader": "^3.5.3",
     "typescript": "^2.5.3",
@@ -89,10 +89,10 @@
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.3",
     "vue-template-compiler": "^2.5.2",
-    "vuex-class": "^0.2.0",
+    "vuex-class": "^0.3.0",
     "webpack": "^3.7.1",
     "webpack-bundle-analyzer": "^2.2.1",
-    "webpack-dev-middleware": "^1.10.0",
+    "webpack-dev-middleware": "^2.0.1",
     "webpack-hot-middleware": "^2.19.1",
     "webpack-merge": "^4.1.0"
   },
